fix(api-docs): wrong description
